# MyOpenGL

./: .gitignore  CMakeLists.txt
include/: matrix.h  model.h  point2i.h  point3d.h  primitives.h  vector.h
res/models/Gun/: Gun1_NRM.tga
res/models/Skull/: Skull.mtl  Skull.tga
src/: main.cpp  model.cpp  point2i.cpp  point3d.cpp  primitives.cpp
